--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ highlight_theme: github
 author: Fu Peng
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
+github_username: xpeng722
+location: He nan, China
 email: chumpma@gmail.com
 
 # ---------------- #
