--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author: Fu Peng
 organization: 
 organization_url: 
 github_username: xpeng722
-location: He nan, China
+location: Bei Jing, China
 email: chumpma@gmail.com
 
 # ---------------- #
